<resources>
    <string name="app_name">SwiftMove</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="marker_title_from">ตำแหน่งรับสิ่งของ</string>
    <string name="marker_title_to">ตำแหน่งส่งสิ่งของ</string>
    <string name="dialog_network_message">โปรดตรวจสอบการเชื่อมต่ออินเตอร์เน็ตของคุณ</string>
    <string name="dialog_network_btn_positive">ตั้งค่า</string>
    <string name="dialog_network_btn_negative">ยกเลิก</string>
    <string name="edit_text_position_help">ข้อมูลเพิ่มเติม (ชื่อตึก, ชั้น)</string>
    <string name="edit_text_position_to">เลือกที่อยู่รับสิ่งของ</string>
    <string name="edit_text_position_from">เลือกที่อยู่ส่งสิ่งของ</string>
    <string name="confirm">ยืนยัน</string>
    <string name="_1">1</string>
    <string name="route">เส้นทาง</string>
    <string name="_2">2</string>
    <string name="driver">คนขับ</string>
    <string name="_3">3</string>
    <string name="charge">ค่าบริการ</string>
    <string name="click_for_select_route_to">กดเพื่อเลือกปลายทาง</string>
    <string name="circle_fr">รับ</string>
    <string name="circle_to">ส่ง</string>
    <string name="ic_car">&#xf1b9;</string>
    <string name="_0">0</string>
    <string name="km">กม.</string>
    <string name="next">ต่อไป</string>
    <string name="route_distances">ระยะทางการขนส่ง :</string>
    <string name="car_motorbike">รถมอเตอร์ไซต์</string>
    <string name="car_pickup">รถกระบะ</string>
    <string name="car_ecocar">รถอีโคคาร์</string>
    <string name="kilomaters"> กิโลเมตร</string>
    <string name="select_position_center">กดเลือกตำแหน่งนี้</string>
    <string name="click_agian_exit_application">กดอีกครั้งเพื่อออกจากแอปพลิเคชัน</string>
    <string name="create_account_here">สมัครสมาชิกใหม่</string>
    <string name="forgot_password">ลืมรหัสผ่าน?</string>
    <string name="email">อีเมล</string>
    <string name="password">รหัสผ่าน</string>
    <string name="limit_password">อย่างน้อย 8 ตัวอักขระ</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="password_receive_email">รหัสผ่านที่ได้รับจากอีเมล</string>
    <string name="ex_input_token">ตัวอย่าง : 7326</string>
    <string name="password_new">รหัสผ่านใหม่</string>
    <string name="confirm_password_new">ยืนยันรหัสผ่านใหม่</string>
    <string name="register">สมัครสมาชิก</string>
    <string name="confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="number_phone">เบอร์โทรศัพท์</string>
    <string name="text_help_reset_password">กรุณากรอกอีเมลที่ใช้งานแล้วระบบจะส่งวิธีการตั้งรหัสผ่านใหม่ไปให้</string>
    <string name="rating">คะแนนทั้งหมด</string>
    <string name="type_car">ประเภทรถ</string>
    <string name="brand_car">ยี่ห้อ</string>
    <string name="model_car">รุ่น</string>
    <string name="service_charge">ค่าบริการ</string>
    <string name="charge_rate">คิดตามระยะทาง</string>
    <string name="additional_service">ค่าบริการเสริม</string>
    <string name="driver_lift">คนขับช่วยยกของ</string>
    <string name="assistant_lift">ผู้ช่วยยกของไม่รวมคนขับ</string>
    <string name="cart">รถเข็น</string>
    <string name="last_name">นามสกุล</string>
    <string name="first_name">ชื่อ</string>
    <string name="confirm_password_old">ยืนยันรหัสผ่านปัจจุบัน</string>
    <string name="change_profile">เปลี่ยนรูป</string>
    <string name="account">บัญชี</string>
    <string name="info_profile">ข้อมูลส่วนตัว</string>
    <string name="info_services">ข้อมูลค่าบริการ</string>
    <string name="info_car">ข้อมูลรถที่ให้บริการ</string>
    <string name="info">ข้อมูล</string>
    <string name="contact_swiftmove">ติดต่อ SwiftMove</string>
    <string name="settings">การตั้งค่า</string>
    <string name="version_app">เวอร์ชัน v1.0.0</string>
    <string name="notification_sound">แจ้งเตือนด้วยเสียง</string>
    <string name="notification_vibrate">แจ้งเตือนด้วยระบบสั่น</string>
    <string name="news">รับข่าวสารใหม่ๆ เกี่ยวกับแอปพลิเคชัน</string>


    <string name="selected_place">Last Selected Place:</string>

    <string name="radius">รัศมี</string>
    <string name="find">พบ</string>
    <string name="person">ราย</string>
    <string name="not_find_driver">ไม่เจอผู้ให้บริการ</string>
    <string name="search_place">ค้นหาสถานที่</string>
    <string name="truck">กระบะตู้ทึบ</string>
    <string name="EcoCar">รถ 5 ประตู</string>
    <string name="driver_by">ผู้ให้บริการโดย</string>
    <string name="_25">25</string>
    <string name="please_confirm_services_again">กรุณายืนยันการเรียกใช้บริการอีกครั้ง</string>
    <string name="license_plate">ป้ายทะเบียนรถ</string>
</resources>
