<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e9ebee"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="#c6e7fa"
            android:gravity="center">

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:background="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/line"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/toolbar_dropshadow" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ic_complete" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ic_active_find" />


                    <ImageView
                        android:id="@+id/sub_ring"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ic_job" />
                </FrameLayout>

                <FrameLayout

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="@drawable/ic_overview" />
                </FrameLayout>

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/toolbar_dropshadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radius"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/textViewKm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#ecd202"
                    android:gravity="center"
                    android:text="@string/_25"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/km"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/find"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />

            <android.support.v7.widget.CardView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/textViewPerson"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:background="#ecd202"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/person"
                android:textColor="@color/colorTitle"
                android:textSize="16sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:contentDescription="@string/not_find_driver"
                android:id="@+id/imgNo"
                android:layout_width="136dp"
                android:layout_height="136dp"
                android:layout_gravity="center"
                android:src="@drawable/emoji"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="56dp"
                android:text="@string/not_find_driver"
                android:textColor="#5f6c72"
                android:textSize="32sp"
                android:textStyle="bold|italic"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_gravity="center_horizontal" />

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </android.support.v4.widget.SwipeRefreshLayout>


        </FrameLayout>


    </LinearLayout>
</layout>
